# Baked-Global-Illumination

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cornellbox3.lm  test2.lm
AntTweakBar/: CMakeLists.txt
AntTweakBar/src/: TwColors.cpp  TwMgr.h
baked-gi/: BakedGIApp.cc  BakedGIApp.hh  CMakeLists.txt  ColorUtils.hh  CubeMap.cc  CubeMap.hh  DebugPathTracer.cc  DebugPathTracer.hh  DirectionalLight.hh  IlluminationBaker.cc  IlluminationBaker.hh  Image.cc  Image.hh  LightMapBaker.cc  LightMapBaker.hh  LightMapReader.cc  LightMapReader.hh  LightMapWriter.cc  Main.cc  Material.hh  Mesh.hh  Model.cc  Model.hh  PathTracer.cc  PathTracer.hh  Primitive.hh  ReflProbeBaker.cc  ReflProbeBaker.hh  ReflectionProbe.hh  RenderPipeline.cc  RenderPipeline.hh  Scene.cc  Scene.hh  TinyGltf.cc  TriBoxTest.cc  VoxelGrid.hh
baked-gi/models/: Forge.fbx  cornellbox.glb  cornellbox_notex.glb  test.glb  test2.glb
baked-gi/models/3DForge/Fantasy_Interiors/Villages_&_Towns/Demo Scenes/: DEMO TEMPLATE.unity
baked-gi/models/3DForge/Fantasy_Interiors/Villages_&_Towns/Demo Scenes/Forge/: Blacksmith's Forge.unity
baked-gi/models/3DForge/Fantasy_Interiors/Villages_&_Towns/Documents/: Village_Interiors_User_Guid_v1.3.txt
baked-gi/models/3DForge/Fantasy_Interiors/Villages_&_Towns/Materials/: fi_village_containers.mat  fi_village_doors.mat  fi_village_floor_stone03.mat  fi_village_floor_wood04.mat  fi_village_forge.mat  fi_village_lighting.mat  fi_village_shields.mat  fi_village_walls.mat  fi_village_webs.mat  fi_village_wood.mat  fi_village_woven.mat
baked-gi/models/3DForge/Fantasy_Interiors/Villages_&_Towns/Particles/Materials/: Flame.mat  Flame2.mat
baked-gi/models/3DForge/Fantasy_Interiors/Villages_&_Towns/Prefabs/Dias/: fi_vil_dias2_02.prefab
baked-gi/models/3DForge/Fantasy_Interiors/Villages_&_Towns/Prefabs/Doors/: fi_vil_door04.prefab
baked-gi/models/3DForge/Fantasy_Interiors/Villages_&_Towns/Prefabs/Floors/: fi_vil_floor_stone03.prefab  fi_vil_floor_wood04.prefab
baked-gi/models/3DForge/Fantasy_Interiors/Villages_&_Towns/Prefabs/Forge/: fi_vil_forge_anvil.prefab  fi_vil_forge_coolingbath_large2.prefab  fi_vil_forge_crate_small.prefab  fi_vil_forge_forge3_lit.prefab  fi_vil_forge_toolsrack1b.prefab  fi_vil_forge_workbensh_large1.prefab  fi_vil_forge_workbensh_small1.prefab
baked-gi/models/kitchen/: Country-Kitchen.mtl
baked-gi/shaders/: BRDF.glsl  CubeMapUtils.glsl  DebugEnvMap.fsh  DebugImage.fsh  DebugImage.vsh  DebugReflProbes.fsh  FXAA.glsl  Object.fsh  Object.vsh  ObjectNoTex.fsh  ObjectNoTex.vsh  ObjectTex.vsh  PostProcess.fsh  PrecalcCommon.glsl  PrecalcEnvBrdfLut.csh  PrecalcEnvMap.csh  PrecalcEnvMapProbe.csh  ProbeGrid.glsl  Shadow.fsh  Tonemap.glsl  UberShader.fsh  UberShader.vsh  blur.fsh  object.fsh  object.vsh  postprocess.fsh  skybox.fsh
baked-gi/textures/: test.lm  test2_new.lm
glow/: .gitmodules  CMakeLists.txt  Readme.md
glow-extras/: CMakeLists.txt  Readme.md  glow-extras.cc
glow-extras/assimp/: CMakeLists.txt
glow-extras/assimp/glow-extras/assimp/: Importer.hh
glow-extras/camera/: CMakeLists.txt
glow-extras/camera/glow-extras/camera/: CameraBase.cc  CameraBase.hh
glow-extras/debugging/: CMakeLists.txt
glow-extras/debugging/shader/glow-debugging/: primitive.transparent.fsh  primitive.vsh
glow-extras/geometry/: CMakeLists.txt
glow-extras/geometry/glow-extras/geometry/: CoordFrame.hh  Cube.cc  Cube.hh  UVSphere.cc
glow-extras/material/: Readme.md
glow-extras/material/glow-extras/material/: GGXMaterial.cc
glow-extras/material/shader/glow-material/: precalc-env-brdf-lut.csh  precalc-env-map.csh  precalc.glsl
glow-extras/pipeline/: CMakeLists.txt
glow-extras/pipeline/glow-extras/pipeline/: RenderPass.hh  RenderPassType.hh
glow-extras/pipeline/shader/glow-pipeline/: output.fsh  transparency.glsl
glow-extras/shader/: CMakeLists.txt
glow-extras/shader/glow-extras/shader/: Output.cc  Output.hh
glow-extras/timing/: CMakeLists.txt
glow-extras/timing/glow-extras/timing/: PerformanceTimer.hh
glow/cmake/: basic-setup.cmake
glow/docs/: .gitignore  AcglMigration.md
glow/scripts/std140-test-gen/: gen-std140-code.py
glow/scripts/tex-code-gen/: gen-tex-code.py  texture.cc.tmpl  texture.hh.tmpl
glow/src/glow/: gl.cc  gl.hh  glow.hh
glow/src/glow/common/: alignment.hh  gl_to_string.hh  gltypeinfo.cc  gltypeinfo.hh  log.cc  profiling.hh  scoped_gl.hh  shared.hh  str_utils.hh  stream_readall.hh
glow/src/glow/data/: SurfaceData.cc  TextureData.binary.cc  TextureData.lodepng.cc  TextureData.qt.cc  TextureData.stb.cc
glow/src/glow/objects/: ArrayBuffer.hh  ArrayBufferAttribute.hh  AtomicCounterBuffer.cc  Buffer.hh  ElementArrayBuffer.cc  Framebuffer.hh  OcclusionQuery.cc  PrimitiveQuery.cc  PrimitiveQuery.hh  Program.hh  Shader.hh  ShaderStorageBuffer.hh  Texture.cc  Texture.hh  Texture1D.cc  Texture1D.hh  Texture2DMultisample.hh  Texture2DMultisampleArray.cc  Texture2DMultisampleArray.hh  TextureCubeMapArray.cc  TextureCubeMapArray.hh  TextureRectangle.cc  TextureRectangle.hh  TransformFeedback.cc  TransformFeedback.hh  UniformBuffer.cc  UniformBuffer.hh  VertexArray.hh
glow/src/glow/util/: DefaultShaderParser.cc  LocationMapping.hh  ShaderParser.cc  UniformState.cc  UniformState.hh
libs/aion/: CMakeLists.txt  Readme.md
libs/aion/src/aion/: Action.hh  ActionAnalyzer.cc  ActionAnalyzer.hh  ActionClass.cc  ActionLabel.hh  ActionPackage.cc  ActionTree.cc  ActionTree.hh
libs/aion/src/aion/common/: MessageQueue.cc  NetMessage.hh  NetMessageFlags.hh  NetMessageReader.cc  NetMessageReader.hh  auto.hh  format.cc  format.hh  macro_join.hh  property.hh
libs/aion/src/aion/common/snappy/: snappy-internal.hh  snappy-stubs-public.hh  snappy.cc
libs/assimp-lean/: CMakeLists.txt
libs/assimp-lean/contrib/zlib/: CTestTestfile.cmake
libs/glow-extras/glfw/: CMakeLists.txt
libs/glow-extras/glfw/glow-extras/glfw/: GlfwApp.cc  GlfwApp.hh
libs/glow-extras/material/: CMakeLists.txt
libs/glow-extras/material/glow-extras/material/: GGXMaterial.hh  IBL.cc  IBL.hh
libs/glow-extras/material/shader/glow-material/: material-ggx.glsl
(+250 files in other folders)
